ghc-4335c07/testsuite/tests/deriving/should_fail/T5478.hs
{-# LANGUAGE MagicHash #-}
module T5478 where

import GHC.Exts

data Foo = Foo0 ByteArray#  deriving Show
